# PIAIC

./: .gitignore  readme.md
Q2/anime-agent/: AnimeAioutput.md  README.md  pyproject.toml
Q2/anime-agent/src/anime/: __init__.py  agent.py
Q2/chatbot-project/: README.md  chainlit.md  chatbot.py  main.py  my_secrets.py  pyproject.toml
Q2/hello-agent/: README.md  agent_hello.py  pyproject.toml
Q2/message_formatter_project/: README.md  main.py  pyproject.toml
Q2/message_formatter_project/message_formatter/: message_formatter.py
